<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MVC Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="outText">0</string>
    <string name="buttonAC">AC</string>
    <string name="buttonDiv">÷</string>
    <string name="buttonAns">=</string>
    <string name="buttonAdd">+</string>
    <string name="buttonMul">x</string>
    <string name="buttonSub">-</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>

</resources>