<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#000000"
    tools:context=".MainActivity">

    <TableRow
        android:gravity="center">
        <TextView
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:layout_span="4"
            android:id="@+id/outText"
            android:importantForAutofill="no"
            android:text="@string/outText"
            tools:text="0"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF"
            android:textSize="64sp"
            android:textStyle="normal" tools:targetApi="o" />
    </TableRow>

    <TableRow
        android:gravity="center">
        <Button
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:layout_span="3"
            android:id="@+id/buttonAC"
            android:layout_height="86dp"
            android:backgroundTint="#B2B1B0"
            android:text="@string/buttonAC"
            tools:text="AC"
            android:textSize="30sp"
            android:textStyle="normal" tools:targetApi="o"/>

        <Button
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:id="@+id/buttonDiv"
            android:layout_height="86dp"
            android:backgroundTint="#FF9800"
            android:text="@string/buttonDiv"
            tools:text="÷"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="normal" tools:targetApi="o"/>
    </TableRow>

    <TableRow
        android:gravity="center">
        <Button
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:id="@+id/button7"
            android:layout_height="86dp"
            android:backgroundTint="#4D4E4F"
            android:text="@string/button7"
            tools:text="7"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="normal" tools:targetApi="o"/>

        <Button
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:id="@+id/button8"
            android:layout_height="86dp"
            android:backgroundTint="#4D4E4F"
            android:text="@string/button8"
            tools:text="8"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="normal" tools:targetApi="o"/>

        <Button
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:id="@+id/button9"
            android:layout_height="86dp"
            android:backgroundTint="#4D4E4F"
            android:text="@string/button9"
            tools:text="9"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="normal" tools:targetApi="o"/>

        <Button
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:id="@+id/buttonMul"
            android:layout_height="86dp"
            android:backgroundTint="#FF9800"
            android:text="@string/buttonMul"
            tools:text="x"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:textStyle="normal" tools:targetApi="o"/>
    </TableRow>

    <TableRow
        android:gravity="center">
        <Button
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:id="@+id/button4"
            android:layout_height="86dp"
            android:backgroundTint="#4D4E4F"
            android:text="@string/button4"
            tools:text="4"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="normal" tools:targetApi="o"/>

        <Button
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:id="@+id/button5"
            android:layout_height="86dp"
            android:backgroundTint="#4D4E4F"
            android:text="@string/button5"
            tools:text="5"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="normal" tools:targetApi="o"/>

        <Button
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:id="@+id/button6"
            android:layout_height="86dp"
            android:backgroundTint="#4D4E4F"
            android:text="@string/button6"
            tools:text="6"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="normal" tools:targetApi="o"/>

        <Button
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:id="@+id/buttonSub"
            android:layout_height="86dp"
            android:backgroundTint="#FF9800"
            android:text="@string/buttonSub"
            tools:text="-"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="normal" tools:targetApi="o"/>
    </TableRow>

    <TableRow
        android:gravity="center">
        <Button
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:id="@+id/button1"
            android:layout_height="86dp"
            android:backgroundTint="#4D4E4F"
            android:text="@string/button1"
            tools:text="1"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="normal" tools:targetApi="o"/>

        <Button
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:id="@+id/button2"
            android:layout_height="86dp"
            android:backgroundTint="#4D4E4F"
            android:text="@string/button2"
            tools:text="2"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="normal" tools:targetApi="o"/>

        <Button
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:id="@+id/button3"
            android:layout_height="86dp"
            android:backgroundTint="#4D4E4F"
            android:text="@string/button3"
            tools:text="3"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="normal" tools:targetApi="o"/>

        <Button
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:id="@+id/buttonAdd"
            android:layout_height="86dp"
            android:backgroundTint="#FF9800"
            android:text="@string/buttonAdd"
            tools:text="+"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="normal" tools:targetApi="o"/>
    </TableRow>

    <TableRow
        android:gravity="center">
        <Button
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:layout_span="3"
            android:id="@+id/button0"
            android:layout_height="86dp"
            android:backgroundTint="#4D4E4F"
            android:text="@string/button0"
            tools:text="0"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="normal" tools:targetApi="o"/>

        <Button
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:id="@+id/buttonAns"
            android:layout_height="86dp"
            android:backgroundTint="#FF9800"
            android:text="@string/buttonAns"
            tools:text="="
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="normal" tools:targetApi="o"/>
    </TableRow>

</TableLayout>